--- a/index.css
+++ b/index.css
@@ -1,3 +1,247 @@
-p{
-    color:red;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  
 }
+.main{
+    height: 1000px;
+    background-image: linear-gradient(to top, #f3fadd, #ddf3e1, #d0ebe4, #cbe0e2, #cad5db, #cad1da, #cbced7, #cccad4, #d4cad9, #decadb, #eac9d9, #f6c8d4);
+}
+.main_nav{
+    height:100px;
+    width:100%;
+    margin-top: 2px;
+}
+.login {
+    text-align: center;
+    background-image: linear-gradient(to top, #e9e9ea, #ececec, #efeeef, #f1f1f1, #f4f4f4);
+    padding: 10px;
+    margin-top:5% ;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: large;
+    
+}
+
+
+.navbar{
+    height:80px;
+    width:100%;
+    background-color: #c3cbdc;
+    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
+    display :flex;
+    padding: 5px;
+   
+}
+.logo_3 {
+    display:none;
+   }
+
+form {
+    margin-top: 20px;
+    align-items: center;
+    margin-inline: 20px;
+}
+
+.email,
+.password {
+    margin-bottom: 15px;
+}
+
+.email label,
+.password label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.email input,
+.password input {
+    width: 70%;
+    margin-right: 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    height: 30px;
+    
+}
+
+button {
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+a {
+    text-decoration: none;
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+.forgot{
+    display:flex;
+    margin-left: 30%;
+    margin-right: 30%;
+    
+}
+.fgt:hover{
+    text-decoration: line-through;
+
+
+}
+.register{
+    margin-left: 60%;
+}
+@media screen and (max-width:991px){
+    
+    .logo_2{
+         display:none;
+     }
+     .logo1{
+         display:none;
+     }
+     .logo_1{
+         display:none;
+     }
+     .logo_3 {
+        height: auto;
+        width: 150px;
+       
+        display:block;
+        margin-top: 2%;
+       margin-right: 60%;
+        
+     }
+     h1{
+         font-size: large;
+         margin-top: 2%;
+     }
+     .login{
+        margin-top:40%;
+        font-size: medium;
+     }
+     .email input,
+.password input {
+    width: 100%;
+    height: 20% ;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+ }
+ @media screen and (max-width:768px){
+     .logo_2{
+          display:none;
+      }
+      .logo1{
+          display:none;
+      }
+      .logo_1{
+          display:none;
+      }
+      .logo_3 {
+        height: auto;
+        width: 150px;
+       
+        display:block;
+        margin-top: 2%;
+        margin-left:5%;
+        
+     }
+      
+      h1{
+          font-size: medium;
+          margin-top: 2%;
+      }
+      .but{
+         font-size: medium;
+      }
+      .login{
+        margin-top:40%;
+        font-size: medium;
+     }
+     .email input,
+.password input {
+    width: 100%;
+    height: 20% ;
+    padding: 8px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+}
+  }
+  @media screen and (max-width:575px){
+     .logo_2{
+          display:none;
+      }
+      .logo1{
+          display:none;
+      }
+      .logo_1{
+          display:none;
+      }
+      .logo_3 {
+        height: auto;
+        width: 150px;
+       
+        display:block;
+        margin-top: 2%;
+        margin-left:20%;
+        
+     }
+      .mainbox{
+          margin-inline: 5%;
+      }
+      h1{
+          font-size: 1rem;
+          margin-top: 2%;
+      }
+      .but{
+         font-size: small;
+      }
+      .login{
+        margin-top:60%;
+        font-size: medium;
+        width:350px;
+        margin-left: 10%;
+        margin-right: 10%;
+     }
+     .email input,
+.password input {
+    width: 100%;
+    height: 20% ;
+    
+    margin-right: 30px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+}
+.forgot{
+    display:flex;
+    margin-left: 15%;
+    margin-right: 15%;
+    
+}
+.fgt:hover{
+    text-decoration: line-through;
+
+
+}
+.register{
+    margin-left: 80%;
+}
+
+  }
+  
+  
+  
