--- a/practice/app1/templates/app1/index.html
+++ b/practice/app1/templates/app1/index.html
@@ -1,27 +1,41 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="{% static 'index.css'%}">
     <title>Login Page</title>
 </head>
 <body>
-    <div class="main">
     <div class="main-nav">
-        <img class="main_nav" src="main_nav.png" alt="main_nav" >
-        <div class="logo_3">
-            <img src="indiapostlogo.png" alt="INDIAPOST">
+        <div class="navbar">
+            <div >
+                   <img class="logo1" src="{% static 'indiapostlogo.png ' %}" >
+            </div>
+           <div >
+               <img class="logo_1" src="{% static 'logo.jpg ' %}" alt="national_emblem" > 
+       
+           </div>
+           <div >
+               <img class="logo_2" src="{% static 'G20.png ' %}" alt="national_emblem" >
+       
+           </div>
+    
+           <div >
+            <img class="logo_3" src="{% static 'indiapostlogo.png ' %}" >
+         </div>
+           </div>
         </div>
         
-        </div>
     <div class="login">
-        <h1>Login</h1>
- <!-- {% for message in messages %}--> 
-        <div><!--{{ message }}--> </div>
-   <!-- {% endfor %}-->
+       <h1><u>India Post Invoice Generator</u></h1>
+       <h1>Login</h1>
+ {% for message in messages %}
+        <div class="alert-message {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+   {% endfor %}
     <form action=" " method="post" autocomplete="on">
-        <!--{% csrf_token %}-->
+        {% csrf_token %}
         <div class="email">
             <label for="username">Email:</label>
             <input  class="input" type="email" id="username" name="username" required>
@@ -37,10 +51,8 @@
     </form>
     <div class="forgot">
     <div class="fgt">
-
     <p><a href="/forgot-password">Forgot Password</a></p></div>
-    <div class="register"><p><a href="/main">go to QUESTIONNAIRE</a></p></div>
+    <div class="register"><p><a href="/register">register here</a></p></div>
     </div>
-</div>
 </body>
 </html>
