new changes to view

--- a/practice/app1/templates/app1/main1.html
+++ b/practice/app1/templates/app1/main1.html
@@ -34,36 +34,36 @@
                     </tr>
                     <tr>
                         <td>1. Name of the Branch Office (BO)</td>
-                        <td><input type="text" name="branchName" placeholder="Enter Branch Name"></td>
+                        <td><input type="text" name="branch_name" placeholder="Enter Branch Name"></td>
                     </tr>
                     <tr>
                         <td>2. Name of the Account Office (AO)</td>
-                        <td><input type="text" name="accountOfficeName" placeholder="Enter Account Office Name"></td>
+                        <td><input type="text" name="account_office_name" placeholder="Enter Account Office Name"></td>
                     </tr>
                     <tr>
                         <td>3. Name of the Head Office</td>
-                        <td><input type="text" name="headOfficeName" placeholder="Enter Head Office Name"></td>
+                        <td><input type="text" name="head_office_name" placeholder="Enter Head Office Name"></td>
                     </tr>
                     <tr>
                         <td>4. Facility ID of the BO Profit/Cost centre ID of the BO</td>
-                        <td><input type="text" name="facilityID" placeholder="Enter Facility ID"></td>
+                        <td><input type="number" name="facility_id" placeholder="Enter Facility ID"></td>
                     </tr>
                     <tr>
                         <td>5. Establishment of the BO</td>
-                        <td><input type="text" name="establishment" placeholder="Enter Establishment"></td>
+                        <td><input type="date" name="establishment" placeholder="Enter Establishment"></td>
                     </tr>
                     <tr>
                         <td>6. Date of Last Inspection (DLI) and by whom</td>
-                        <td><input type="text" name="lastInspection" placeholder="Enter Last Inspection Date"></td>
+                        <td><input type="date" name="last_inspection" placeholder="Enter Last Inspection Date"></td>
                     </tr>
                     <tr>
                         <td>7. Date of subsequent visits by Mail Overseer since DLI</td>
-                        <td><input type="text" name="subsequentVisits" placeholder="Enter Subsequent Visits Date"></td>
+                        <td><input type="date" name="subsequent_visits" placeholder="Enter Subsequent Visits Date"></td>
                     </tr>
                 </table>
             </div>
-
-        
+</form>
+        <form>
         <div class="form-container">
 
 
