username and login functionality added

--- a/practice/app1/templates/app1/index.html
+++ b/practice/app1/templates/app1/index.html
@@ -37,8 +37,8 @@
     <form action=" " method="post" autocomplete="on">
         {% csrf_token %}
         <div class="email">
-            <label for="username">Email:</label>
-            <input  class="input" type="email" id="username" name="username" required>
+            <label for="username">Username:</label>
+            <input  class="input" type="text" id="username" name="username" required>
         </div>
         <div class="password">
             <label for="password">Password:</label>
