--- a/practice/app1/templates/app1/index.html
+++ b/practice/app1/templates/app1/index.html
@@ -29,7 +29,7 @@
         </div>
         
     <div class="login">
-       <h1><u>India Post Invoice Generator</u></h1>
+       <h1><u>India Post Mail Overseer</u></h1>
        <h1>Login</h1>
  {% for message in messages %}
         <div class="alert-message {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
@@ -52,7 +52,9 @@
     <div class="forgot">
     <div class="fgt">
     <p><a href="/forgot-password">Forgot Password</a></p></div>
-    <div class="register"><p><a href="/register">register here</a></p></div>
+    <!-- <div class="register"><p><a href="/register">register here</a></p></div> -->
     </div>
 </body>
+
+
 </html>
